4.0.6 (YYYY-MM-DD)
------------------

Enhancements
 - [web] create card from sender or recipient address (#3002, #4610)
 - [web] updated Angular to version 1.7.7
 - [web] restored support for next/previous slot suggestion in attendees editor
 - [web] improved auto-completion display of contacts
 - [core] baseDN now accept dynamic domain values (#3685 - sponsored by iRedMail)
 - [core] we now handle optional and non-required attendee states

Bug fixes
 - [web] fixed all-day event dates with different timezone
 - [web] fixed display of Bcc header (#4642)
 - [web] fixed refresh of drafts folder when saving a draft
 - [web] fixed CAS session timeout handling during XHR requests (#4468)
 - [web] reflect active locale in HTML lang attribute (#4660)
 - [web] allow scroll of login page on small screen (#4035)
 - [web] fixed saving of email address for external calendar notifications (#4630)
 - [core] ignore transparent events in time conflict validation (#4539)
 - [core] fixed yearly recurrence calculator when starting from previous year
 - [core] changes to contacts are now propagated to lists (#850, #4301, #4617)

4.0.5 (2019-01-09)
------------------

New features
 - [web] dynamic stylesheet for printing calendars (#3768)

Enhancements
 - [web] show source addressbook of matching contacts in appointment editor (#4579)
 - [web] improve display of keyboard shortcuts
 - [web] show time for messages of yesterday (#4599)
 - [web] fit month view to window size (#4554)
 - [web] updated CKEditor to version 4.11.1
 - [web] updated Angular Material to version 1.1.12

Bug fixes
 - [sogo-tool] fixed "manage-acl unsubscribe" command (#4591)
 - [web] fixed handling of collapsed/expanded mail accounts (#4541)
 - [web] fixed handling of duplicate recipients (#4597)
 - [web] fixed folder export when XSRF validation is enabled (#4502)
 - [web] don't encode filename extension when exporting folders
 - [web] fixed download of HTML body parts