@@ -6,6 +6,7 @@ Enhancements
  - [web] updated Angular to version 1.7.7
  - [web] restored support for next/previous slot suggestion in attendees editor
  - [web] improved auto-completion display of contacts
+ - [web] allow modification of attendees participation role
  - [core] baseDN now accept dynamic domain values (#3685 - sponsored by iRedMail)
  - [core] we now handle optional and non-required attendee states
 
